<resources>
    <string name="app_name">GlucosApp</string>
    <string name="mainbutton">mainButton</string>
    <string name="configurationbutton">ConfigurationButton</string>
    <string name="estadisticsbutton">EstadisticsButton</string>
    <string name="historicbutton">HistoricButton</string>
    <string name="wellcome">Wellcome</string>
    <string name="what_do_you_wanna_do">what do you want to do?</string>
    <string name="medida">medida</string>
    <string name="historial">Historial</string>
    <string name="glucosa_maxima">Glucosa Maxima</string>
    <string name="glucosa_minima">Glucosa Minima</string>
    <string name="alarma">Alarma</string>
    <string name="configuration">Configuration</string>
    <string name="fab">fab</string>
    <string name="glucmax">GlucMax</string>
    <string name="glucmin">GlucMin</string>
    <string name="h">h</string>
    <string name="foodicon">foodIcon</string>
    <string name="alarmicon">AlarmIcon</string>
    <string name="pickicon">PickIcon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_value">Old value</string>
    <string name="new_value">New value</string>
    <string name="press_to_measure">Press to measure</string>
    <string name="button_to_measure">button to measure</string>
    <string name="stadistics_result">Stadistics Result</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_you_have_account">Do You have account?</string>
    <string name="back">back</string>
    <string name="push_dates">Push dates</string>
    <string name="pull_dates">Pull dates</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="registrer">Registrer</string>
    <string name="dosis_recomendada">Dosis recomendada</string>
    <string name="glucosa_promedio_en_la_ma_ana">Glucosa promedio en la mañana</string>
    <string name="insulina_lenta_registrada">Insulina lenta registrada:</string>
    <string name="ratio_de_insulina_rapida">Ratio de Insulina Rapida</string>
    <string name="factor_de_sensibilidad_actual">Factor de sensibilidad actual</string>
    <string name="back_to_main">Back to main</string>
</resources>