<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_historical_scene"
    android:id="@+id/motion">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mainbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="700dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@null"
        android:src="@drawable/baseline_radio_button_checked_24" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ConfigurationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/configurationbutton"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@null"
        android:src="@drawable/ic_baseline_miscellaneous_services_24"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/estadisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/estadisticsbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="stadisticActivity"
        android:background="@null"
        android:src="@drawable/ic_baseline_auto_graph_24"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/historicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/historicbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@null"
        android:src="@drawable/ic_baseline_menu_book_24"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/medidaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/medida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@null"
        android:src="@drawable/ic_baseline_water_drop_24"
        android:visibility="invisible"/>



</androidx.constraintlayout.motion.widget.MotionLayout>