<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackground"
    android:orientation="vertical"
    tools:context=".views.ConfigurationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/label_historical_fragment"
        android:fontFamily="@font/madjoe"
        android:text="@string/configuration"
        android:textAlignment="center"
        android:textSize="25sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMax"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_result_cards"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="17dp"
                android:text="@string/glucosa_maxima" />

            <TextView
                android:id="@+id/glucMaxim"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingTop="17dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/unidadGkucMAx"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingTop="17dp"
                android:text="@string/glucmax"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/gradient_result_cards">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="17dp"
                android:text="@string/glucosa_minima" />

            <TextView
                android:id="@+id/glucMin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="30dp"
                android:paddingTop="17dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/unidadGlucMin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingTop="17dp"
                android:text="@string/glucmin"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAlarm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_result_cards"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="17dp"
                android:text="@string/alarma" />

            <TextView
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="95dp"
                android:paddingTop="17dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/unidadAlarm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingTop="17dp"
                android:text="@string/h"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/previewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="24sp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/fab"
        android:foreground="@drawable/ic_baseline_save_24"
        android:foregroundGravity="center" />

    <include
        android:id="@+id/motion"
        layout="@layout/motionlayout" />

</LinearLayout>