<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".views.MainFragment">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome"
        android:textSize="28sp"
        android:fontFamily="@font/chicory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/image"
        android:text="@string/what_do_you_wanna_do"
        android:fontFamily="@font/madjoe"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="300dp"
        android:src="@drawable/provi"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mainbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@null"
        android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ConfigurationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/configurationbutton"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@null"
        android:src="@drawable/ic_baseline_miscellaneous_services_24"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/estadisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/estadisticsbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="stadisticActivity"
        android:background="@null"
        android:src="@drawable/ic_baseline_auto_graph_24"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/historicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/historicbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@null"
        android:src="@drawable/ic_baseline_menu_book_24"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/medidaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/medida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@null"
        android:src="@drawable/ic_baseline_water_drop_24"
        android:visibility="invisible"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/firebaseConection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="170dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_wifi_24"
        android:visibility="invisible"
        android:contentDescription="buttonFromConectionToFirebase" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lowInsulin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="170dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_pick"
        android:visibility="invisible"
        android:contentDescription="buttonToDirectFromLowInsulinConfiguration" />

</androidx.constraintlayout.motion.widget.MotionLayout>